<resources>
    <string name="app_name">BodyCraft</string>
    <string name="hello_blank_fragment">Hola fragmento vacío</string>
    <string name="title_activity_navegador">Navegador</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="nav_header_title">BODY CRAFT</string>
    <string name="nav_header_subtitle">Todos nuestros productos</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="action_settings">Configuración</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_slideshow">Presentación de diapositivas</string>
    <string name="alimentacion">Alimentación</string>
    <string name="titDialogo">Has creado un nuevo producto</string>
    <string name="cuerpoDialogo">Gracias por añadir un producto para la comunidad</string>
    <string name="comidaseleccionada">Comida seleccionada</string>
    <string name="diadelasemanaseleccionado">Lunes</string>
    <string name="search_hint">Buscar productos...</string>
    <string name="comidas_del_dia">Comidas del día</string>
    <string name="añadir_productos">Añadir productos</string>
    <string name="nuevo_producto">Nuevo producto</string>
    <string name="title_carrito_activity">Tu Cesta</string>
    <string name="total_label">Total: $0.00</string>
    <string name="pay_button">Pagar</string>
    <string name="welcome_text">Bienvenido a ChatGPT\nPruébalo Ya</string>
    <string name="message_hint">Escribe aquí</string>
    <string name="search_hintproducto">Buscar un producto</string>
    <string name="our_products">Nuestros Productos</string>
    <string name="popular">Popular</string>
    <string name="home">Inicio</string>
    <string name="diet">Dieta</string>
    <string name="routine">Rutina</string>
    <string name="store">Tienda</string>
    <string name="settings">Ajustes</string>
    <string name="title_page">Queremos Saber de Ti</string>
    <string name="description">Rellena tus datos personales</string>
    <string name="weight_label">Peso</string>
    <string name="hint_weight">Escribe tu Peso</string>
    <string name="routine_days_label">Dias Rutina</string>
    <string name="hint_routine_days">Elige nº dias rutina</string>
    <string name="meal_number_label">Nº Comidas</string>
    <string name="hint_meal_number">¿Nº comidas al día?</string>
    <string name="save_data">Guardar Datos</string>
    <string name="monday">Lunes</string>
    <string name="search_exercises_hint">Buscar ejercicios...</string>
    <string name="add_exercise">Agregar Ejercicio</string>
    <string name="week_exercises">Ejercicios de la Semana</string>
    <string name="product_image_description">Imagen Producto</string>
    <string name="product_title">Nombre del Producto</string>
    <string name="product_brand">Marca del Producto</string>
    <string name="product_grams">Cantidad de gramos: XX</string>
    <string name="product_kcal">Calorías: XX kcal</string>
    <string name="product_fat">Grasas: XX g</string>
    <string name="product_carbs">Carbohidratos: XX g</string>
    <string name="product_protein">Proteínas: XX g</string>
    <string name="add_to_cart_button">Agregar a la lista</string>
    <string name="delete_product_button">Borrar producto</string>
    <string name="login_username_hint">Nombre de usuario</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_create_account_text">Crear Cuenta</string>
    <string name="login_have_account_text">¿Tienes cuenta?</string>
    <string name="login_social_text">Nuestras redes</string>
    <string name="get_started">Comenzar</string>
    <string name="song_title">Título de la canción</string>
    <string name="current_time">0:00</string>
    <string name="total_time">0:00</string>
    <string name="want_to_know">Queremos saber de ti</string>
    <string name="fill_personal_data">Rellena tus datos personales</string>
    <string name="name">Nombre</string>
    <string name="name_hint">Escribe tu nombre</string>
    <string name="age">Edad</string>
    <string name="age_hint">Escribe tu edad</string>
    <string name="gender">Género</string>
    <string name="gender_hint">Escribe tu género</string>
    <string name="continuar">Continuar</string>
    <string name="title">Título</string>
    <string name="enter_title">Ingresa el título</string>
    <string name="brand">Seccion</string>
    <string name="enter_brand">Ingresa la seccion</string>
    <string name="grams_quantity">Cantidad de gramos</string>
    <string name="enter_grams_quantity">Ingresa la cantidad de gramos</string>
    <string name="calories">Calorías (kcal)</string>
    <string name="enter_calories">Ingresa las calorías</string>
    <string name="fats">Grasas (g)</string>
    <string name="enter_fats">Ingresa las grasas</string>
    <string name="carbohydrates">Carbohidratos (g)</string>
    <string name="enter_carbohydrates">Ingresa los carbohidratos</string>
    <string name="proteins">Proteínas (g)</string>
    <string name="enter_proteins">Ingresa las proteínas</string>
    <string name="image_url">URL de la imagen</string>
    <string name="enter_image_url">Ingresa la URL de la imagen</string>
    <string name="save_product">Guardar Producto</string>
    <string name="make_payment">Realizar Pago</string>
    <string name="realize_payment">Realizar Pago</string>
    <string name="payment_button">Realizar Pago</string>
    <string name="profile_title">Perfil</string>
    <string name="name_text">Jose Luis</string>
    <string name="email_text">joseluisbotella@gmail.com</string>
    <string name="notifications_text">Notificaciones</string>
    <string name="calendar_text">Calendario</string>
    <string name="gallery_text">Galería</string>
    <string name="playlist_text">Comunidad</string>
    <string name="logout_text">Cerrar Sesión</string>
    <string name="hello_text">Hola Jose Luis</string>
    <string name="bodycraft_text">BodyCraft Construye\nTu Cuerpo!</string>
    <string name="hint_search">Buscar...</string>
    <string name="music_text">Música</string>
    <string name="chatgpt_text">ChatGPT</string>
    <string name="favorite_text">Salud</string>
    <string name="ads_text">Anuncios</string>
    <string name="see_all_text">Ver Todos</string>
    <string name="choose_exercises">Elige tus ejercicios</string>
    <string name="add_exercises_to_routine">Añade ejercicios a tu rutina</string>
    <string name="title_">Sección de Ejercicios</string>
    <string name="arms">Brazos</string>
    <string name="chest">Pecho</string>
    <string name="back">Espalda</string>
    <string name="legs">Piernas</string>
    <string name="shoulders">Hombros</string>
    <string name="abdomen">Abdomen</string>
    <string name="choose_products">Elige tus Productos</string>
    <string name="add_products">Añade Productos a tu lista de Comidas</string>
    <string name="drinks">Bebidas</string>
    <string name="supplements">Suplementos</string>
    <string name="snacks">Snacks</string>
    <string name="dairy">Lácteos</string>
    <string name="frozen">Congelados</string>
    <string name="canned">Conservas</string>
    <string name="meat_fish">Carne y Pescado</string>
    <string name="cereals">Cereales</string>
    <string name="songs">CANCIONES</string>
    <string name="no_songs_found">CANCIONES NO ENCONTRADAS</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste la contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="create_account">Crear cuenta</string>
    <string name="social_login">Nuestras redes</string>
    <string name="title_exercises">Ejercicios</string>
    <string name="button_add_exercise">Agregar Ejercicio</string>
    <string name="screen_title">Lista de productos</string>
    <string name="titDialogo2">Producto Creado</string>
    <string name="cuerpoDialogo2">Has creado un nuevo producto con exito.</string>
    <string name="exercise_name">Nombre del Ejercicio</string>
    <string name="muscle_group">Grupo Muscular</string>
    <string name="add">Agregar</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_brand2">Marca</string>
    <string name="delete">Borrar</string>
    <string name="genero_title">Gender</string>
    <string name="genero_summary">Select a gender</string>
    <string name="fecha_nacimiento_title">Date of birth</string>
    <string name="fecha_nacimiento_summary">Select your date of birth</string>
    <string name="peso_title">Weight</string>
    <string name="peso_summary">Select your weight</string>
    <string name="objetivos_title">Goals</string>
    <string name="objetivos_summary">Select your goals</string>
    <string name="esquemacomidashorarios_title">Meal plan and schedule</string>
    <string name="esquemacomidashorarios_summary">Select your meals</string>
    <string name="idioma_title">Language</string>
    <string name="idioma_summary">Select your language</string>
    <string name="intervalo_notificacion_title">Notification Interval</string>
    <string name="intervalo_notificacion_summary">Enter the interval in minutes between notifications</string>
    <string name="acerca_de_title">About...</string>
    <string name="acerca_de_summary">Learn more about the developer</string>
    <string name="default_rutina_name">Nombre rutina</string>
    <string name="user_data_template">Entonces tu nombre es %1$s\ y tienes %2$d\ años ademas pesas %3$d\kg y eres %4$s\</string>
</resources>
