<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/nombreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/grupoMuscularTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muscle_group"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/borrarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupoMuscularTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
