<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    tools:context=".Login.TienesCuenta">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/registration_image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:cropToPadding="true"
                android:adjustViewBounds="true"
                android:background="@drawable/circular_shape"
                android:clipToOutline="true"
                android:src="@drawable/iconcuenta" />

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/hint_username"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/forgot_password"
                android:textAlignment="center" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/white"
                android:padding="18dp"
                android:text="@string/login"
                android:textColor="#3B84F1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/create_account_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/create_account"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/social_login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/youtube"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="16dp"
                    android:paddingRight="10dp"
                    android:onClick="openYoutube"
                    app:srcCompat="@drawable/youtube" />

                <ImageView
                    android:id="@+id/github"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="10dp"
                    android:onClick="openGithub"
                    android:src="@drawable/rocket" />


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>
